// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ReportGenerate rendering render with Props 1`] = `
<TabContainer
  className="report-generate"
>
  <TabHeader
    exitCode="exit 0"
    onDownload={null}
    onRestart={[Function]}
    toggleFullScreen={[Function]}
  />
  <TabBody
    completed={0}
    error={null}
    exitCode="exit 0"
    logs={
      Array [
        "No running process",
      ]
    }
    scheduled="2019-08-21T16:14:16.520+03:00"
  />
</TabContainer>
`;

exports[`ReportGenerate rendering render without Props 1`] = `
<TabContainer
  className="report-generate"
>
  <TabHeader
    exitCode=""
    onDownload={null}
    onRestart={[Function]}
    toggleFullScreen={[Function]}
  />
  <TabBody
    completed={0}
    error={null}
    exitCode=""
    logs={null}
    scheduled={null}
  />
</TabContainer>
`;
